--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
+    useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
         applicationId "com.example.button"
@@ -11,6 +12,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled = true
     }
 
     buildTypes {
@@ -25,6 +27,7 @@ android {
 }
 
 dependencies {
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:25.3.1'
     compile files('libs/Analogics3inchThermalBTPrinterAPI.jar')
     compile files('libs/AndroidBiometricsAPI.jar')
@@ -39,8 +42,9 @@ dependencies {
     compile files('libs/N5PrinterAPI.jar')
     compile files('libs/opencv_library-2.4.3.jar')
     compile files('libs/org-apache-commons-codec.jar')
-    compile files('libs/android-support-v4.jar')
-    compile files('libs/httpclient-4.5.3.jar')
-    compile files('libs/httpcore-4.4.6.jar')
-    compile files('libs/httpmime-4.5.3.jar')
+  // compile files('libs/android-support-v4.jar')
+    //compile files('libs/httpclient-4.5.3.jar')
+   // compile files('libs/httpcore-4.4.6.jar')
+   // compile files('libs/httpmime-4.5.3.jar')
+
 }
